--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }  # CLI argument parsing
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
